# shopist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.devenv/: nix-eval-cache.db-shm  nix-eval-cache.db-wal
migration/: Cargo.toml
migration/src/: lib.rs  m20240113_000001_create_tables.rs
src/: error.rs  main.rs
src/handlers/: items.rs  mod.rs  shops.rs
src/models/: item.rs  shop.rs
src/routes/: mod.rs
templates/: base.html  item.html  items_list.html  shop_items.html  shops.html  shops_list.html
